[package]
name = "bobbin"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.2.1"
joinery = "2.0.0"
futures = "0.3.1"
lazy_static = "1.4.0"
futures-timer = "3.0.0"
# horrorshow, for HTML templates. Prefer this over maud, because maud allocates.
