[package]
name = "bobbin"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.1"
bytes = "0.5.6"
chrono = "0.4.13"
futures = "0.3.5"
horrorshow = "0.8.3"
http = "0.2.1"
hyper = "0.13.7"
joinery = "2.0.0"
lazy_format= { version = "1.8.3", features = ["horrorshow"] }
paw = "1.0.0"
redis = { version = "0.16.0", default-features = false, features = ["aio", "r2d2", "tokio-comp"] }
reqwest = { version = "0.10.1", features = ["json", "rustls-tls"], default-features = false }
rmp-serde = "0.14.4"
secrecy = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3.15", features = [ "paw" ] }
tokio = { version = "0.2.21", default-features = false, features = ["rt-threaded", "macros"] }
warp = "0.2.3"

[package.metadata.docs.rs]
all-features = true
