[package]
name = "bobbin"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.5"
horrorshow = "0.8.4"
http = "0.2.6"
hyper = "0.14.7"
itertools = "0.10.3"
lazy_format = { version = "1.10.0", features = ["horrorshow"] }
paw = "1.0.0"
redis = { version = "0.21.5", default-features = false, features = [
    "aio",
    "tokio-comp",
] }
reqwest = { version = "0.11.9", features = [
    "json",
    "rustls-tls",
], default-features = false }
rmp-serde = "1.0.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
structopt = { version = "0.3.25", features = ["paw"] }
thiserror = "1.0.30"
tokio = { version = "1.15.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
warp = "0.3.2"

[package.metadata.docs.rs]
all-features = true
