[package]
name = "bobbin"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
axum = "0.5.13"
bytes = "1.2.1"
futures = "0.3.21"
horrorshow = "0.8.4"
http = "0.2.8"
hyper = "0.14.19"
itertools = "0.10.3"
lazy_format = { version = "1.10.0", features = ["horrorshow"] }
once_cell = "1.13.0"
paw = "1.0.0"
r2d2 = "0.8.10"
redis = { version = "0.21.5", default-features = false, features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
rmp-serde = "1.0.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
structopt = { version = "0.3.25", features = ["paw"] }
thiserror = "1.0.30"
tokio = { version = "1.15.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing = { version = "0.1.36", features = ["async-await"] }
url = { version = "2.2.2", features = ["serde"] }
warp = "0.3.2"

[package.metadata.docs.rs]
all-features = true
